--- a/selfusage.ini
+++ b/selfusage.ini
@@ -4,7 +4,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🎯 全球直连,[]GEOsite,CN
+ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/Loyalsoldier/surge-rules@release/ruleset/icloud.txt
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/Loyalsoldier/surge-rules@release/ruleset/apple.txt
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/Loyalsoldier/surge-rules@release/ruleset/direct.txt
